# vttiro

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TLDR.md  TODO.md  WORK.md  llms.txt  llmsme.sh  pyproject.toml  pytest.ini
.github/workflows/: push.yml  release.yml  scheduled-integration.yml  test.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+272 more)
.mypy_cache/3.10/Cython/: Shadow.data.json  Shadow.meta.json  __init__.data.json  __init__.meta.json
.mypy_cache/3.10/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.10/Levenshtein/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/OpenSSL/: SSL.data.json  SSL.meta.json  __init__.data.json  __init__.meta.json  crypto.data.json  crypto.meta.json
.mypy_cache/3.10/PIL/: Image.data.json  Image.meta.json  ImageFile.data.json  ImageFile.meta.json  ImageFilter.data.json  ImageFilter.meta.json  ImagePalette.data.json  ImagePalette.meta.json  PyAccess.data.json  PyAccess.meta.json  __init__.data.json  __init__.meta.json  _imaging.data.json  _imaging.meta.json
.mypy_cache/3.10/_cffi_backend/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.10/aiodns/: __init__.data.json  __init__.meta.json  error.data.json  error.meta.json
.mypy_cache/3.10/aiohappyeyeballs/: __init__.data.json  __init__.meta.json  _staggered.data.json  _staggered.meta.json  impl.data.json  impl.meta.json  types.data.json  types.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.10/aiohttp/: __init__.data.json  __init__.meta.json  _cookie_helpers.data.json  _cookie_helpers.meta.json  abc.data.json  abc.meta.json  base_protocol.data.json  base_protocol.meta.json  client.data.json  client.meta.json  client_exceptions.data.json  client_exceptions.meta.json  client_middleware_digest_auth.data.json  client_middleware_digest_auth.meta.json  client_middlewares.data.json  client_middlewares.meta.json  client_proto.data.json  client_proto.meta.json  client_reqrep.data.json  client_reqrep.meta.json  client_ws.data.json  client_ws.meta.json  compression_utils.data.json  compression_utils.meta.json  connector.data.json  connector.meta.json  cookiejar.data.json  cookiejar.meta.json  formdata.data.json  formdata.meta.json  hdrs.data.json  hdrs.meta.json  helpers.data.json  helpers.meta.json  http.data.json  http.meta.json  http_exceptions.data.json  http_exceptions.meta.json  http_parser.data.json  http_parser.meta.json  (+52 more)
.mypy_cache/3.10/aioquic/: __init__.data.json  __init__.meta.json  _buffer.data.json  _buffer.meta.json  _crypto.data.json  _crypto.meta.json  buffer.data.json  buffer.meta.json  tls.data.json  tls.meta.json
.mypy_cache/3.10/aiosignal/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.10/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  lowlevel.data.json  lowlevel.meta.json  to_thread.data.json  to_thread.meta.json
.mypy_cache/3.10/argcomplete/: __init__.data.json  __init__.meta.json  completers.data.json  completers.meta.json  exceptions.data.json  exceptions.meta.json  finders.data.json  finders.meta.json  io.data.json  io.meta.json  lexers.data.json  lexers.meta.json  shell_integration.data.json  shell_integration.meta.json
.mypy_cache/3.10/asttokens/: __init__.data.json  __init__.meta.json  astroid_compat.meta.json  asttokens.data.json  asttokens.meta.json  line_numbers.data.json  line_numbers.meta.json  mark_tokens.data.json  mark_tokens.meta.json  (+2 more)
issues/: 101.txt  102.txt  103.txt  104.txt  105.txt  202.txt
plan/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md  part7.md  part8.md  part9.md
scripts/: ci_enhancement.py  generate_ci_test_data.py  setup_dev_automation.py
src/vttiro/: __init__.py  __main__.py  cli.py  vttiro.py
temp/: test1.sh  test2.vtt
tests/: conftest.py  factories.py  run_tests.py  test_basic_integration.py  test_config.py  test_engine_model_selection.py  test_enhanced_config.py  test_error_handling.py  test_package.py  test_performance.py  test_property_based.py  test_transcriber_integration.py  test_video_processing.py
(+7234 files in other folders)
